--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
     "singleQuote": false,
     "trailingComma": "all",
     "printWidth": 80,
-    "plugins": ["prettier-plugin-solidity"]
+    "plugins": ["prettier-plugin-solidity"],
+    "endOfLine": "lf"
 }
