--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     },
     "dependencies": {
         "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+        "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
         "@openzeppelin/contracts": "4.8.1",
         "@openzeppelin/contracts-upgradeable": "4.8.1",
         "@typechain/ethers-v5": "^10.2.0",
