--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
         "@nomiclabs/hardhat-solhint": "^3.0.0",
         "@nomiclabs/hardhat-truffle5": "^2.0.7",
         "@nomiclabs/hardhat-web3": "^2.0.0",
-        "@openzeppelin/hardhat-upgrades": "^1.22.1",
+        "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
+        "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
+        "@typechain/ethers-v5": "^10.2.0",
+        "@typechain/hardhat": "^6.1.5",
+        "@types/mocha": "^10.0.1",
         "@typescript-eslint/eslint-plugin": "^5.53.0",
         "@typescript-eslint/parser": "^5.53.0",
         "chai": "^4.3.7",
@@ -52,17 +56,9 @@
         "prettier-plugin-solidity": "^1.1.2",
         "solhint": "^3.4.0",
         "solhint-plugin-prettier": "^0.0.5",
-        "web3": "^1.8.2"
-    },
-    "dependencies": {
-        "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
-        "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
-        "@openzeppelin/contracts": "4.8.1",
-        "@openzeppelin/contracts-upgradeable": "4.8.1",
-        "@typechain/ethers-v5": "^10.2.0",
-        "@typechain/hardhat": "^6.1.5",
-        "@types/mocha": "^10.0.1",
+        "web3": "^1.8.2",
         "dotenv": "^16.0.3",
+        "hardhat-contract-sizer": "^2.9.0",
         "hardhat-docgen": "^1.3.0",
         "hardhat-gas-reporter": "^1.0.9",
         "js-big-decimal": "^1.4.1",
@@ -72,6 +68,11 @@
         "ts-node": "^10.9.1",
         "typechain": "^8.1.1",
         "typescript": "^4.9.5"
+    },
+    "dependencies": {
+        "@openzeppelin/contracts": "4.8.1",
+        "@openzeppelin/contracts-upgradeable": "4.8.1",
+        "@openzeppelin/hardhat-upgrades": "^1.22.1"
     },
     "husky": {
         "hooks": {
